Update canvas mochitests; covered operators changed with cairo 1.8.2 update
UltraBlame original commit: f3993df71c29e77d3114081cac32edccbfe2110d

--- a/content/canvas/test/Makefile.in
+++ b/content/canvas/test/Makefile.in
@@ -1766,42 +1766,6 @@ composite
 .
 image
 .
-source
--
-in
-.
-html
-\
-test_2d
-.
-composite
-.
-image
-.
-destination
--
-in
-.
-html
-\
-test_2d
-.
-composite
-.
-image
-.
-source
--
-out
-.
-html
-\
-test_2d
-.
-composite
-.
-image
-.
 destination
 -
 out
@@ -1815,18 +1779,6 @@ composite
 image
 .
 source
--
-atop
-.
-html
-\
-test_2d
-.
-composite
-.
-image
-.
-destination
 -
 atop
 .
@@ -1872,42 +1824,6 @@ composite
 .
 canvas
 .
-source
--
-in
-.
-html
-\
-test_2d
-.
-composite
-.
-canvas
-.
-destination
--
-in
-.
-html
-\
-test_2d
-.
-composite
-.
-canvas
-.
-source
--
-out
-.
-html
-\
-test_2d
-.
-composite
-.
-canvas
-.
 destination
 -
 out
@@ -1921,18 +1837,6 @@ composite
 canvas
 .
 source
--
-atop
-.
-html
-\
-test_2d
-.
-composite
-.
-canvas
-.
-destination
 -
 atop
 .
@@ -1957,62 +1861,6 @@ uncovered
 fill
 .
 copy
-.
-html
-\
-test_2d
-.
-composite
-.
-uncovered
-.
-image
-.
-source
--
-in
-.
-html
-\
-test_2d
-.
-composite
-.
-uncovered
-.
-image
-.
-destination
--
-in
-.
-html
-\
-test_2d
-.
-composite
-.
-uncovered
-.
-image
-.
-source
--
-out
-.
-html
-\
-test_2d
-.
-composite
-.
-uncovered
-.
-image
-.
-destination
--
-atop
 .
 html
 \
@@ -7387,6 +7235,125 @@ html
 \
 #
 #
+Temporarily
+disabled
+tests
+;
+unbounded
+operators
+changed
+behaviour
+need
+to
+reevaluate
+tests
+#
+#
+test_2d
+.
+composite
+.
+canvas
+.
+destination
+-
+atop
+.
+html
+\
+#
+test_2d
+.
+composite
+.
+canvas
+.
+destination
+-
+in
+.
+html
+\
+#
+test_2d
+.
+composite
+.
+canvas
+.
+source
+-
+in
+.
+html
+\
+#
+test_2d
+.
+composite
+.
+canvas
+.
+source
+-
+out
+.
+html
+\
+#
+test_2d
+.
+composite
+.
+image
+.
+destination
+-
+atop
+.
+html
+\
+#
+test_2d
+.
+composite
+.
+image
+.
+destination
+-
+in
+.
+html
+\
+#
+test_2d
+.
+composite
+.
+image
+.
+source
+-
+in
+.
+html
+\
+#
+test_2d
+.
+composite
+.
+image
+.
+source
+-
+out
+.
+html
+\
+#
+#
 Tests
 that
 fail
@@ -7507,13 +7474,6 @@ outside1
 .
 html
 \
-(
-NULL
-)
-_TEST_FILES_3
-+
-=
-\
 test_2d
 .
 gradient
@@ -7535,6 +7495,69 @@ radial
 cone
 .
 top
+.
+html
+\
+(
+NULL
+)
+_TEST_FILES_3
++
+=
+\
+test_2d
+.
+composite
+.
+uncovered
+.
+image
+.
+source
+-
+in
+.
+html
+\
+test_2d
+.
+composite
+.
+uncovered
+.
+image
+.
+destination
+-
+in
+.
+html
+\
+test_2d
+.
+composite
+.
+uncovered
+.
+image
+.
+source
+-
+out
+.
+html
+\
+test_2d
+.
+composite
+.
+uncovered
+.
+image
+.
+destination
+-
+atop
 .
 html
 \
