--- a/toolkit/components/downloads/src/Makefile.in
+++ b/toolkit/components/downloads/src/Makefile.in
@@ -522,6 +522,31 @@ DDOWNLOAD_SCANNER
 endif
 endif
 endif
+ifndef
+MOZ_SUITE
+#
+XXX
+-
+Until
+Suite
+builds
+off
+XULRunner
+we
+can
+'
+t
+guarantee
+our
+implementation
+#
+of
+nsIDownloadManagerUI
+overrides
+toolkit
+'
+s
+.
 EXTRA_COMPONENTS
 =
 \
@@ -532,6 +557,7 @@ js
 (
 NULL
 )
+endif
 include
 (
 topsrcdir
