Bug 463929. Support 8-bit WAV streams. r+sr=roc
UltraBlame original commit: 7d06dac3fe83ee23adf6c319fdaea9ceea59292d

--- a/content/media/video/test/Makefile.in
+++ b/content/media/video/test/Makefile.in
@@ -540,6 +540,10 @@ test_volume
 .
 html
 \
+test_wav_8bit
+.
+html
+\
 test_wav_ended1
 .
 html
@@ -557,6 +561,10 @@ seek
 ogg
 \
 r11025_s16_c1
+.
+wav
+\
+r11025_u8_c1
 .
 wav
 \
