Bug 461735.  Use the final channel URI as the script URI.  r+sr=jst, a=beltzner
UltraBlame original commit: ffeecd437beb41622074ad2b4144dd8b6145b580

--- a/content/base/test/Makefile.in
+++ b/content/base/test/Makefile.in
@@ -1286,6 +1286,30 @@ test_bug459424
 .
 html
 \
+bug461735
+-
+redirect1
+.
+sjs
+\
+bug461735
+-
+redirect2
+.
+sjs
+\
+bug461735
+-
+post
+-
+redirect
+.
+js
+\
+test_bug461735
+.
+html
+\
 (
 NULL
 )
