--- a/browser/base/content/test/Makefile.in
+++ b/browser/base/content/test/Makefile.in
@@ -501,6 +501,24 @@ unreliable
 :
 bug
 432425
+#
+browser_ctrlTab
+.
+js
+disabled
+since
+it
+seems
+to
+be
+causing
+subsequent
+tests
+to
+fail
+:
+bug
+464141
 _BROWSER_FILES
 =
 browser_bug321000
@@ -560,10 +578,6 @@ js
 page_style_sample
 .
 html
-\
-browser_ctrlTab
-.
-js
 \
 browser_selectTabAtIndex
 .
