Bug 462272: Record dependency on generated header javascript-trace.h, r=mrbkap, NPOB
Record object files' dependency on javascript-trace.h, when
HAVE_DTRACE is set.

Use $(CURDIR) where javascript-trace.h appears as a target or
dependency, to ensure that VPATH doesn't cause us to use a copy other
than the one in the object directory.

UltraBlame original commit: d2c374d7b45cde352ab59284d0f905313fc60d81

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -1308,6 +1308,10 @@ jsdtracef
 .
 h
 \
+(
+CURDIR
+)
+/
 javascript
 -
 trace
@@ -3934,6 +3938,10 @@ jsautooplen
 h
 ifdef
 HAVE_DTRACE
+(
+CURDIR
+)
+/
 javascript
 -
 trace
@@ -3992,6 +4000,29 @@ h
 .
 in
 >
+javascript
+-
+trace
+.
+h
+(
+CPPSRCS
+:
+%
+.
+cpp
+=
+%
+.
+(
+OBJ_SUFFIX
+)
+)
+:
+(
+CURDIR
+)
+/
 javascript
 -
 trace
