Bug 463888 - Do not persist the "Save As" location in private browsing mode; r=gavin, a=blocking-firefox3.1+
UltraBlame original commit: a0f72d018c4ae03799f0f2e1a5d105d8bebc7147

--- a/toolkit/mozapps/downloads/src/nsHelperAppDlg.js.in
+++ b/toolkit/mozapps/downloads/src/nsHelperAppDlg.js.in
@@ -283,6 +283,17 @@ mozilla
 com
 >
 #
+Ehsan
+Akhgari
+<
+ehsan
+.
+akhgari
+gmail
+.
+com
+>
+#
 #
 Alternatively
 the
@@ -1913,6 +1924,75 @@ result
 .
 parent
 ;
+/
+/
+Do
+not
+remember
+the
+last
+save
+directory
+inside
+the
+private
+browsing
+mode
+var
+persistLastDir
+=
+true
+;
+try
+{
+var
+pbs
+=
+Components
+.
+classes
+[
+"
+mozilla
+.
+org
+/
+privatebrowsing
+;
+1
+"
+]
+.
+getService
+(
+Components
+.
+interfaces
+.
+nsIPrivateBrowsingService
+)
+;
+if
+(
+pbs
+.
+privateBrowsingEnabled
+)
+persistLastDir
+=
+false
+;
+}
+catch
+(
+e
+)
+{
+}
+if
+(
+persistLastDir
+)
 prefs
 .
 setComplexValue
