Bug 454964: |make check|: test_0110_general.js reports leak 1. r=mconnor, a1.9.1b2=beltzner
UltraBlame original commit: 301a7a8617e674ad8b0dab0900455a8ee768de59

--- a/toolkit/mozapps/update/src/nsUpdateService.js.in
+++ b/toolkit/mozapps/update/src/nsUpdateService.js.in
@@ -7094,6 +7094,22 @@ shutdown
 ;
 /
 /
+Prevent
+leaking
+the
+downloader
+(
+bug
+454964
+)
+this
+.
+_downloader
+=
+null
+;
+/
+/
 Release
 Services
 gApp
