Bug 313057: Automatic updater downgrades/overwrites browser version when an older/identical version is in the queue. r=bsmedberg, a1.9.1b2=beltzner
UltraBlame original commit: 4db7b751339e5440305f60ba340ff2880d355f7b

--- a/toolkit/mozapps/update/src/nsUpdateService.js.in
+++ b/toolkit/mozapps/update/src/nsUpdateService.js.in
@@ -904,6 +904,15 @@ status
 "
 ;
 const
+FILE_UPDATE_VERSION
+=
+"
+update
+.
+version
+"
+;
+const
 FILE_UPDATE_ARCHIVE
 =
 "
@@ -2925,6 +2934,189 @@ writeStringToFile
 (
 statusFile
 state
+)
+;
+}
+/
+*
+*
+#
+Writes
+the
+update
+'
+s
+application
+version
+to
+a
+file
+in
+the
+patch
+directory
+.
+If
+#
+the
+update
+doesn
+'
+t
+provide
+application
+version
+information
+via
+the
+#
+extensionVersion
+attribute
+the
+string
+"
+null
+"
+will
+be
+written
+to
+the
+file
+.
+#
+This
+value
+is
+compared
+during
+startup
+(
+in
+nsUpdateDriver
+.
+cpp
+)
+to
+determine
+if
+#
+the
+update
+should
+be
+applied
+.
+Note
+that
+this
+won
+'
+t
+provide
+protection
+from
+#
+downgrade
+of
+the
+application
+for
+the
+nightly
+user
+case
+where
+the
+application
+#
+version
+doesn
+'
+t
+change
+.
+#
+param
+dir
+#
+The
+patch
+directory
+where
+the
+update
+.
+version
+file
+should
+be
+#
+written
+.
+#
+param
+version
+#
+The
+version
+value
+to
+write
+.
+Will
+be
+the
+string
+"
+null
+"
+when
+the
+#
+update
+doesn
+'
+t
+provide
+the
+extensionVersion
+attribute
+in
+the
+update
+#
+xml
+.
+*
+/
+function
+writeVersionFile
+(
+dir
+version
+)
+{
+var
+versionFile
+=
+dir
+.
+clone
+(
+)
+;
+versionFile
+.
+append
+(
+FILE_UPDATE_VERSION
+)
+;
+writeStringToFile
+(
+versionFile
+version
 )
 ;
 }
@@ -8117,6 +8309,16 @@ update
 state
 =
 STATE_PENDING
+)
+;
+writeVersionFile
+(
+getUpdatesDir
+(
+)
+update
+.
+extensionVersion
 )
 ;
 return
@@ -16278,6 +16480,14 @@ updateDir
 STATE_NONE
 )
 ;
+writeVersionFile
+(
+getUpdatesDir
+(
+)
+null
+)
+;
 return
 null
 ;
@@ -17651,6 +17861,18 @@ getUpdatesDir
 (
 )
 state
+)
+;
+writeVersionFile
+(
+getUpdatesDir
+(
+)
+this
+.
+_update
+.
+extensionVersion
 )
 ;
 this
