Bug 462451: Don't be confused by .deps dirs in the source tree. r=bsmedberg
$(MDDEPDIR) needs to be created in the build tree, but if make rules
list $(MDDEPDIR) as a dependency, then the VPATH search will tend to
find dependency directories in source trees if the source tree has
been configured in the past.  So use $(CURDIR)/$(MDDEPDIR) instead.

Some directory Makefiles have been adding $(MDDEPDIR) to MAKE_DIRS and
GARBAGE_DIRS explicitly, since they're not setting any of the
variables that would cause config/rules.mk to create $(MDDEPDIR)
automatically.  Those makefiles would have to use the $(CURDIR) trick
to defeat the VPATH search, too.  Instead, have rules.mk check an
additional variable NEED_MDDEPDIRS, and let the makefiles set that;
this keeps the magic in one place.

UltraBlame original commit: f30cbc0610b7b6ce6b232460b14e0ad847e49fe5

--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -529,18 +529,18 @@ elf
 dynstr
 -
 gc
-MAKE_DIRS
-+
+#
+Compiling
+the
+above
+will
+create
+dependency
+files
+.
+NEED_MDDEPDIR
 =
-(
-MDDEPDIR
-)
-GARBAGE_DIRS
-+
-=
-(
-MDDEPDIR
-)
+1
 endif
 endif
 #
