--- a/xpcom/tests/static-checker/Makefile.in
+++ b/xpcom/tests/static-checker/Makefile.in
@@ -423,30 +423,18 @@ VPATH
 =
 srcdir
 #
-MAKE_DIRS
-:
-List
-of
-directories
-to
-build
-while
-looping
-over
-directories
+We
+will
+do
+compilations
+that
+create
+dependency
+files
 .
-MAKE_DIRS
-+
+NEED_MDDEPDIR
 =
-(
-MDDEPDIR
-)
-GARBAGE_DIRS
-+
-=
-(
-MDDEPDIR
-)
+1
 include
 (
 DEPTH
