Bug 462451: Don't find generated SpiderMonkey headers via VPATH. r=bsmedberg
UltraBlame original commit: b9b841236298f9b6b50212bdce0f452f1e441b30

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -1308,10 +1308,6 @@ jsdtracef
 .
 h
 \
-(
-CURDIR
-)
-/
 javascript
 -
 trace
@@ -3865,6 +3861,44 @@ h
 jskeyword
 .
 tbl
+#
+Use
+CURDIR
+to
+avoid
+finding
+a
+jsautokw
+.
+h
+in
+the
+source
+tree
+(
+from
+a
+#
+previous
+build
+?
+)
+via
+VPATH
+when
+we
+'
+re
+building
+in
+a
+separate
+tree
+.
+(
+CURDIR
+)
+/
 jsautokw
 .
 h
@@ -3888,6 +3922,44 @@ OBJ_SUFFIX
 jsopcode
 .
 tbl
+#
+Use
+CURDIR
+to
+avoid
+finding
+a
+jsautooplen
+.
+h
+in
+the
+source
+tree
+(
+from
+#
+a
+previous
+build
+?
+)
+via
+VPATH
+when
+we
+'
+re
+building
+in
+a
+separate
+tree
+.
+(
+CURDIR
+)
+/
 jsautooplen
 .
 h
@@ -3930,18 +4002,22 @@ OBJ_SUFFIX
 )
 )
 :
+(
+CURDIR
+)
+/
 jsautokw
 .
 h
+(
+CURDIR
+)
+/
 jsautooplen
 .
 h
 ifdef
 HAVE_DTRACE
-(
-CURDIR
-)
-/
 javascript
 -
 trace
@@ -4000,29 +4076,6 @@ h
 .
 in
 >
-javascript
--
-trace
-.
-h
-(
-CPPSRCS
-:
-%
-.
-cpp
-=
-%
-.
-(
-OBJ_SUFFIX
-)
-)
-:
-(
-CURDIR
-)
-/
 javascript
 -
 trace
