--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -1308,6 +1308,10 @@ jsdtracef
 .
 h
 \
+(
+CURDIR
+)
+/
 javascript
 -
 trace
@@ -4018,6 +4022,10 @@ jsautooplen
 h
 ifdef
 HAVE_DTRACE
+(
+CURDIR
+)
+/
 javascript
 -
 trace
@@ -4076,6 +4084,29 @@ h
 .
 in
 >
+javascript
+-
+trace
+.
+h
+(
+CPPSRCS
+:
+%
+.
+cpp
+=
+%
+.
+(
+OBJ_SUFFIX
+)
+)
+:
+(
+CURDIR
+)
+/
 javascript
 -
 trace
