--- a/browser/locales/Makefile.in
+++ b/browser/locales/Makefile.in
@@ -701,6 +701,68 @@ PWD
 )
 )
 )
+#
+ZIP_IN
+is
+defaulted
+to
+be
+compatible
+with
+the
+files
+the
+wget
+-
+en
+-
+US
+target
+#
+pulls
+.
+You
+may
+override
+ZIP_IN
+if
+you
+provide
+your
+own
+files
+.
+You
+also
+_must_
+#
+override
+ZIP_IN
+when
+MOZ_PKG_PRETTYNAMES
+is
+defined
+-
+the
+default
+will
+not
+#
+work
+in
+that
+case
+.
+ZIP_IN
+?
+=
+(
+_ABS_DIST
+)
+/
+(
+PACKAGE
+)
 DEFINES
 +
 =
@@ -747,16 +809,20 @@ LOCALE_SRCDIR
 -
 DPKG_BASENAME
 =
+"
 (
 PKG_BASENAME
 )
+"
 \
 -
 DPKG_INST_BASENAME
 =
+"
 (
 PKG_INST_BASENAME
 )
+"
 \
 (
 NULL
@@ -1755,6 +1821,7 @@ installer
 :
 WIN32_INSTALLER_OUT
 =
+"
 (
 _ABS_DIST
 )
@@ -1767,6 +1834,7 @@ PKG_INST_BASENAME
 )
 .
 exe
+"
 repackage
 -
 win32
@@ -1826,10 +1894,11 @@ test
 -
 d
 (
-dir
-(
-WIN32_INSTALLER_OUT
+_ABS_DIST
 )
+/
+(
+PKG_INST_PATH
 )
 ;
 then
@@ -1840,10 +1909,11 @@ NSINSTALL
 -
 D
 (
-dir
-(
-WIN32_INSTALLER_OUT
+_ABS_DIST
 )
+/
+(
+PKG_INST_PATH
 )
 ;
 \
@@ -2227,22 +2297,14 @@ STAGEDIST
 UNPACKAGE
 =
 (
-_ABS_DIST
-)
-/
-(
-PACKAGE
+ZIP_IN
 )
 (
 STAGEDIST
 )
 :
 (
-_ABS_DIST
-)
-/
-(
-PACKAGE
+ZIP_IN
 )
 #
 only
@@ -2378,6 +2440,97 @@ stage
 (
 UNMAKE_PACKAGE
 )
+ifdef
+MOZ_PKG_PRETTYNAMES
+ifneq
+(
+(
+filter
+WINNT
+Linux
+(
+OS_ARCH
+)
+)
+)
+#
+Linux
+and
+Windows
+unpack
+to
+a
+directory
+named
+after
+the
+MOZ_APP_NAME
+#
+they
+were
+built
+with
+.
+This
+is
+fine
+when
+when
+MOZ_PKG_PRETTYNAMES
+#
+isn
+'
+t
+defined
+because
+MOZ_PKG_APPNAME
+will
+be
+the
+same
+as
+MOZ_APP_NAME
+.
+#
+However
+when
+MOZ_PKG_PRETTYNAMES
+is
+passed
+MOZ_PKG_APPNAME
+inherits
+#
+from
+MOZ_PKG_DISPLAYNAME
+which
+is
+not
+always
+the
+same
+as
+MOZ_APP_NAME
+.
+cd
+(
+DIST
+)
+/
+l10n
+-
+stage
+&
+&
+\
+mv
+(
+MOZ_APP_NAME
+)
+(
+MOZ_PKG_APPNAME
+)
+endif
+endif
 make
 clobber
 -
@@ -2487,6 +2640,7 @@ zip
 :
 ZIP_OUT
 =
+"
 (
 _ABS_DIST
 )
@@ -2494,15 +2648,18 @@ _ABS_DIST
 (
 PACKAGE
 )
+"
 repackage
 -
 zip
 :
 UNPACKAGE
 =
+"
 (
 ZIP_IN
 )
+"
 repackage
 -
 zip
@@ -2788,6 +2945,7 @@ PKG_PATH
 mv
 -
 f
+"
 (
 DIST
 )
@@ -2799,6 +2957,8 @@ stage
 (
 PACKAGE
 )
+"
+"
 (
 DIST
 )
@@ -2806,6 +2966,7 @@ DIST
 (
 PACKAGE
 )
+"
 repackage
 -
 zip
