Bug 464127 -  Don't use -Os with Intel C/C++ compilers r=ted.mielczarek
Intel recommends against the use of -Os, and using it seems to produce
incorrect code in many recent versions of Intel's compilers.

js/src/Makefile.in tries to use -Os only with G++, but it tests
INTEL_CC, not INTEL_CXX --- even though almost all the sources are
C++.  Check INTEL_CXX instead.

UltraBlame original commit: 19028cd2bad284fbc216cde8dffd7a74d0907d86

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -481,9 +481,9 @@ LIBS
 NSPR_LIBS
 )
 ifdef
-GNU_CC
+GNU_CXX
 ifdef
-INTEL_CC
+INTEL_CXX
 #
 icc
 gets
@@ -516,6 +516,9 @@ here
 ?
 endif
 else
+#
+not
+INTEL_CXX
 MODULE_OPTIMIZE_FLAGS
 =
 -
@@ -545,6 +548,9 @@ fstrict
 aliasing
 endif
 else
+#
+not
+GNU_CXX
 ifeq
 (
 (
