--- a/configure.in
+++ b/configure.in
@@ -14893,10 +14893,97 @@ fi
 linux
 *
 )
+#
+Note
+:
+both
+GNU_CC
+and
+INTEL_CC
+are
+set
+when
+using
+Intel
+'
+s
+C
+compiler
+.
+#
+Similarly
+for
+GNU_CXX
+and
+INTEL_CXX
+.
 if
 test
 "
+INTEL_CC
+"
+|
+|
+test
+"
+INTEL_CXX
+"
+;
+then
+#
+-
+Os
+has
+been
+broken
+on
+Intel
+'
+s
+C
+/
+C
++
++
+compilers
+for
+quite
+a
+#
+while
+;
+Intel
+recommends
+against
+using
+it
+.
+MOZ_OPTIMIZE_FLAGS
+=
+"
+-
+O2
+"
+MOZ_DEBUG_FLAGS
+=
+"
+-
+g
+-
+fno
+-
+inline
+"
+elif
+test
+"
 GNU_CC
+"
+|
+|
+test
+"
+GNU_CXX
 "
 ;
 then
@@ -14976,20 +15063,6 @@ limit
 50
 "
 esac
-fi
-TARGET_NSPR_MDCPUCFG
-=
-'
-\
-"
-md
-/
-_linux
-.
-cfg
-\
-"
-'
 MOZ_OPTIMIZE_FLAGS
 =
 "
@@ -15051,6 +15124,20 @@ debugging
 #
 format
 )
+fi
+TARGET_NSPR_MDCPUCFG
+=
+'
+\
+"
+md
+/
+_linux
+.
+cfg
+\
+"
+'
 MOZ_MEMORY
 =
 1
