--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -14305,16 +14305,84 @@ fi
 linux
 *
 )
+#
+Note
+:
+both
+GNU_CXX
+and
+INTEL_CXX
+are
+set
+when
+using
+Intel
+'
+s
+C
+compiler
+.
 if
 test
 "
-GNU_CC
+INTEL_CXX
+"
+;
+then
+#
+-
+Os
+has
+been
+broken
+on
+Intel
+'
+s
+C
+/
+C
++
++
+compilers
+for
+quite
+a
+#
+while
+;
+Intel
+recommends
+against
+using
+it
+.
+MOZ_OPTIMIZE_FLAGS
+=
+"
+-
+O2
+"
+MOZ_DEBUG_FLAGS
+=
+"
+-
+g
+-
+fno
+-
+inline
+"
+elif
+test
+"
+GNU_CXX
 "
 ;
 then
 GCC_VERSION
 =
-CC
+CXX
 -
 v
 2
@@ -14388,20 +14456,6 @@ limit
 50
 "
 esac
-fi
-TARGET_NSPR_MDCPUCFG
-=
-'
-\
-"
-md
-/
-_linux
-.
-cfg
-\
-"
-'
 MOZ_OPTIMIZE_FLAGS
 =
 "
@@ -14463,6 +14517,20 @@ debugging
 #
 format
 )
+fi
+TARGET_NSPR_MDCPUCFG
+=
+'
+\
+"
+md
+/
+_linux
+.
+cfg
+\
+"
+'
 case
 "
 {
