Bug 461202 - Turn on SSE2 pixman optimizations
UltraBlame original commit: b98316b617970cd6bc6e17e60f8795ec926099c9

--- a/gfx/cairo/libpixman/src/Makefile.in
+++ b/gfx/cairo/libpixman/src/Makefile.in
@@ -522,7 +522,6 @@ OS_TEST
 USE_MMX
 =
 1
-#
 USE_SSE2
 =
 1
@@ -552,25 +551,11 @@ MMX_CFLAGS
 mmmx
 -
 Winline
-#
-See
-bug
-410509
-why
-we
-can
-'
-t
-use
-SSE2
-yet
-on
-linux
-#
+ifdef
+HAVE_FORCE_ALIGN_ARG_POINTER
 USE_SSE2
 =
 1
-#
 MMX_CFLAGS
 +
 =
@@ -578,6 +563,7 @@ MMX_CFLAGS
 msse
 -
 msse2
+endif
 ifneq
 (
 (
