--- a/gfx/cairo/libpixman/src/Makefile.in
+++ b/gfx/cairo/libpixman/src/Makefile.in
@@ -522,6 +522,7 @@ OS_TEST
 USE_MMX
 =
 1
+#
 USE_SSE2
 =
 1
@@ -551,11 +552,25 @@ MMX_CFLAGS
 mmmx
 -
 Winline
-ifdef
-HAVE_FORCE_ALIGN_ARG_POINTER
+#
+See
+bug
+410509
+why
+we
+can
+'
+t
+use
+SSE2
+yet
+on
+linux
+#
 USE_SSE2
 =
 1
+#
 MMX_CFLAGS
 +
 =
@@ -563,7 +578,6 @@ MMX_CFLAGS
 msse
 -
 msse2
-endif
 ifneq
 (
 (
