Bug 451958. Implement content-policy and CheckLoadURI checks for video sources. r+sr=roc,a=beltzner
UltraBlame original commit: 73fb44504b62b597e35c826cd8f5fb10e4771d53

--- a/content/media/video/test/Makefile.in
+++ b/content/media/video/test/Makefile.in
@@ -444,6 +444,14 @@ rules
 mk
 _TEST_FILES
 =
+test_access_control
+.
+html
+\
+file_access_controls
+.
+html
+\
 test_autoplay
 .
 html
@@ -552,6 +560,25 @@ html
 .
 ogg
 \
+320x240
+.
+allow
+-
+origin
+.
+ogg
+\
+320x240
+.
+allow
+-
+origin
+.
+ogg
+^
+headers
+^
+\
 bug461281
 .
 ogg
@@ -567,6 +594,10 @@ wav
 r11025_u8_c1
 .
 wav
+\
+redirect
+.
+sjs
 \
 #
 test_bug448534
