Bug 445004.  Make the base and document URI of document.written documents be the base and document URI of the document on whose current context our code is running.  r+sr=jst, r=dcamp
UltraBlame original commit: b2fbc259ee2baeaec49bd9a08a6874438aa8011c

--- a/content/html/document/test/Makefile.in
+++ b/content/html/document/test/Makefile.in
@@ -443,6 +443,10 @@ test_bug1823
 .
 html
 \
+test_bug57600
+.
+html
+\
 test_bug196523
 .
 html
@@ -564,6 +568,46 @@ test_viewport
 html
 \
 test_documentAll
+.
+html
+\
+test_bug445004
+.
+html
+\
+bug445004
+-
+inner
+.
+js
+\
+bug445004
+-
+outer
+-
+rel
+.
+html
+\
+bug445004
+-
+outer
+-
+abs
+.
+html
+\
+bug445004
+-
+outer
+-
+write
+.
+html
+\
+bug445004
+-
+inner
 .
 html
 \
