Bug 463339. Have js/src use symlinks when installing in dist. r=bsmedberg,a=sayrer
UltraBlame original commit: baff98e6d9ec891a62496b9483eeaaf8a3232c04

--- a/config/js/Makefile.in
+++ b/config/js/Makefile.in
@@ -545,6 +545,34 @@ lib
 '
 directory
 .
+Clearing
+NSDISTMODE
+=
+ensures
+that
+we
+#
+get
+symlinks
+(
+the
+proper
+in
+-
+tree
+build
+behavior
+)
+not
+copies
+(
+the
+#
+default
+GNU
+behavior
+)
+.
 export
 :
 :
@@ -556,6 +584,8 @@ C
 (
 JS_OBJDIR
 )
+NSDISTMODE
+=
 install
 (
 MAKE
@@ -565,6 +595,8 @@ C
 (
 JS_OBJDIR
 )
+NSDISTMODE
+=
 install
 -
 runtime
