--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -420,6 +420,52 @@ config
 autoconf
 .
 mk
+#
+This
+is
+the
+appropriate
+behavior
+for
+GNU
+-
+style
+'
+make
+install
+'
+.
+For
+#
+Mozilla
+in
+-
+tree
+behavior
+leaving
+NSDISTMODE
+unset
+is
+the
+right
+#
+thing
+;
+config
+/
+js
+/
+Makefile
+.
+in
+takes
+care
+of
+that
+.
+NSDISTMODE
+=
+copy
 MODULE
 =
 js
@@ -3703,7 +3749,7 @@ install
 INSTALLED_HEADERS
 )
 (
-SYSINSTALL
+INSTALL
 )
 (
 IFLAGS1
@@ -3726,7 +3772,7 @@ SCRIPTS
 PROGRAM
 )
 (
-SYSINSTALL
+INSTALL
 )
 (
 IFLAGS2
@@ -3799,7 +3845,7 @@ LIBRARY
 )
 )
 (
-SYSINSTALL
+INSTALL
 )
 (
 IFLAGS1
@@ -3818,7 +3864,7 @@ SHARED_LIBRARY
 )
 )
 (
-SYSINSTALL
+INSTALL
 )
 (
 IFLAGS2
@@ -3837,7 +3883,7 @@ IMPORT_LIBRARY
 )
 )
 (
-SYSINSTALL
+INSTALL
 )
 (
 IFLAGS2
