Backing out bug 463339 due to Mac build failure
UltraBlame original commit: acca7d1b9da3449e515bf735e711b70855d58a82

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -420,52 +420,6 @@ config
 autoconf
 .
 mk
-#
-This
-is
-the
-appropriate
-behavior
-for
-GNU
--
-style
-'
-make
-install
-'
-.
-For
-#
-Mozilla
-in
--
-tree
-behavior
-leaving
-NSDISTMODE
-unset
-is
-the
-right
-#
-thing
-;
-config
-/
-js
-/
-Makefile
-.
-in
-takes
-care
-of
-that
-.
-NSDISTMODE
-=
-copy
 MODULE
 =
 js
@@ -3749,7 +3703,7 @@ install
 INSTALLED_HEADERS
 )
 (
-INSTALL
+SYSINSTALL
 )
 (
 IFLAGS1
@@ -3772,7 +3726,7 @@ SCRIPTS
 PROGRAM
 )
 (
-INSTALL
+SYSINSTALL
 )
 (
 IFLAGS2
@@ -3845,7 +3799,7 @@ LIBRARY
 )
 )
 (
-INSTALL
+SYSINSTALL
 )
 (
 IFLAGS1
@@ -3864,7 +3818,7 @@ SHARED_LIBRARY
 )
 )
 (
-INSTALL
+SYSINSTALL
 )
 (
 IFLAGS2
@@ -3883,7 +3837,7 @@ IMPORT_LIBRARY
 )
 )
 (
-INSTALL
+SYSINSTALL
 )
 (
 IFLAGS2
