Temporarily disable all .xul files in a11y mochitests, see bug 465755
UltraBlame original commit: fc37d4174c023af639e5e6505faddd60ba117081

--- a/accessible/tests/mochitest/Makefile.in
+++ b/accessible/tests/mochitest/Makefile.in
@@ -498,9 +498,14 @@ test_aria_role_equation
 .
 html
 \
+(
+warning
 test_bug368835
 .
 xul
+temporarily
+disabled
+)
 \
 test_bug420863
 .
@@ -514,9 +519,14 @@ test_events_caretmove
 .
 html
 \
+(
+warning
 test_groupattrs
 .
 xul
+temporarily
+disabled
+)
 \
 (
 warning
@@ -531,9 +541,14 @@ test_nsIAccessible_actions
 .
 html
 \
+(
+warning
 test_nsIAccessible_actions
 .
 xul
+temporarily
+disabled
+)
 \
 test_nsIAccessible_applicationAccessible
 .
@@ -555,9 +570,14 @@ test_nsIAccessible_name_button
 .
 html
 \
+(
+warning
 test_nsIAccessible_name
 .
 xul
+temporarily
+disabled
+)
 \
 test_nsIAccessible_selects
 .
@@ -583,9 +603,14 @@ test_nsIAccessibleHyperLink
 .
 html
 \
+(
+warning
 test_nsIAccessibleHyperLink
 .
 xul
+temporarily
+disabled
+)
 \
 test_nsIAccessibleHyperText
 .
@@ -611,9 +636,14 @@ test_nsIAccessibleTable_4
 .
 html
 \
+(
+warning
 test_nsIAccessibleTable_listboxes
 .
 xul
+temporarily
+disabled
+)
 \
 test_nsIAccessNode_utils
 .
