Bug 460548 - Port |Bug 450983 - use leakThreshold for SeaMonkey testers| to Firefox; (Av1) Reduce |browserChrome| to 75000 from Infinity; r=ted.mielczarek
UltraBlame original commit: f93edfbd082ee20a099833d199f7cba59cfeb4b0

--- a/testing/mochitest/runtests.py.in
+++ b/testing/mochitest/runtests.py.in
@@ -3725,7 +3725,33 @@ browser
 chrome
 tests
 .
-pass
+#
+But
+we
+are
+close
+to
+0
+(
+bug
+)
+so
+start
+to
+prevent
+/
+detect
+regressions
+.
+(
+Bug
+460548
+)
+options
+.
+leakThreshold
+=
+75000
 else
 :
 #
