Bug 463804 - Tests missing in Makefile.in; r=dcamp a191b2=beltzner (to CLOSED TREE)
UltraBlame original commit: 2fa341c1330ba244db8cce980468c12e498bed4b

--- a/dom/tests/mochitest/ajax/offline/Makefile.in
+++ b/dom/tests/mochitest/ajax/offline/Makefile.in
@@ -493,6 +493,37 @@ test_bug445544
 .
 html
 \
+test_offlineMode
+.
+html
+\
+test_foreign
+.
+html
+\
+test_fallback
+.
+html
+\
+test_updatingManifest
+.
+html
+\
+notonwhitelist
+.
+html
+\
+onwhitelist
+.
+html
+\
+onwhitelist
+.
+html
+^
+headers
+^
+\
 445544_part1
 .
 html
