Bug 466314 - updatingImplicit.html (used by test_offlineMode.html and test_updatingManifest.html) crashes SeaMonkey; (Av1) Disable tests (to CLOSED TREE: bustage fix for changeset 2fa341c1330b)
UltraBlame original commit: f1af606531f5579ff21b14ea3625f4064257611b

--- a/dom/tests/mochitest/ajax/offline/Makefile.in
+++ b/dom/tests/mochitest/ajax/offline/Makefile.in
@@ -493,10 +493,6 @@ test_bug445544
 .
 html
 \
-test_offlineMode
-.
-html
-\
 test_foreign
 .
 html
@@ -504,25 +500,6 @@ html
 test_fallback
 .
 html
-\
-test_updatingManifest
-.
-html
-\
-notonwhitelist
-.
-html
-\
-onwhitelist
-.
-html
-\
-onwhitelist
-.
-html
-^
-headers
-^
 \
 445544_part1
 .
@@ -720,6 +697,54 @@ html
 (
 NULL
 )
+#
+Bug
+466314
+-
+updatingImplicit
+.
+html
+(
+used
+by
+test_offlineMode
+.
+html
+and
+test_updatingManifest
+.
+html
+)
+crashes
+SeaMonkey
+#
+test_offlineMode
+.
+html
+\
+#
+notonwhitelist
+.
+html
+\
+#
+test_updatingManifest
+.
+html
+\
+#
+onwhitelist
+.
+html
+\
+#
+onwhitelist
+.
+html
+^
+headers
+^
+\
 libs
 :
 :
