Bug 463819: Blocklisted add-ons with a compatibility update say they are incompatible rather than blocklisted. r=rstrong, a=blocking1.9.1
UltraBlame original commit: 070e364189c8a622170920c3cc95ceeb8442d4ea

--- a/toolkit/mozapps/extensions/src/nsExtensionManager.js.in
+++ b/toolkit/mozapps/extensions/src/nsExtensionManager.js.in
@@ -1443,7 +1443,7 @@ INSTALLERROR_INCOMPATIBLE_VERSION
 3
 ;
 const
-INSTALLERROR_PHONED_HOME
+INSTALLERROR_PHONING_HOME
 =
 -
 4
@@ -30441,6 +30441,34 @@ Update
 check
 .
 *
+returns
+The
+install
+result
+code
+.
+If
+this
+is
+INSTALLERROR_PHONING_HOME
+*
+then
+a
+remote
+update
+check
+has
+been
+started
+to
+attempt
+to
+resolve
+*
+compatibility
+problems
+.
+*
 /
 installItemFromFileInternal
 :
@@ -32319,6 +32347,9 @@ notification
 for
 us
 .
+var
+status
+=
 em
 .
 installItemFromFileInternal
@@ -32332,6 +32363,29 @@ this
 _installManifest
 )
 ;
+/
+/
+The
+install
+may
+still
+have
+failed
+at
+this
+point
+due
+to
+the
+blocklist
+if
+(
+status
+=
+=
+INSTALLERROR_SUCCESS
+)
+{
 /
 /
 Add
@@ -32437,6 +32491,7 @@ maxAppVersion
 null
 )
 ;
+}
 }
 }
 else
@@ -32914,6 +32969,7 @@ INSTALLERROR_INVALID_MANIFEST
 )
 ;
 return
+INSTALLERROR_INVALID_MANIFEST
 ;
 }
 }
@@ -33137,6 +33193,7 @@ if
 installLocation
 )
 return
+INSTALLERROR_INCOMPATIBLE_VERSION
 ;
 var
 stagedFile
@@ -33180,6 +33237,7 @@ manifest
 file
 .
 return
+INSTALLERROR_PHONING_HOME
 ;
 }
 else
@@ -33289,6 +33347,12 @@ true
 )
 )
 break
+;
+installData
+.
+error
+=
+INSTALLERROR_SUCCESS
 ;
 /
 /
@@ -33475,6 +33539,7 @@ INSTALLERROR_RESTRICTED
 )
 ;
 return
+INSTALLERROR_RESTRICTED
 ;
 }
 /
@@ -34316,6 +34381,11 @@ installData
 .
 error
 )
+;
+return
+installData
+.
+error
 ;
 }
 /
@@ -45136,6 +45206,17 @@ to
 update
 to
 *
+param
+aUpdateCheckType
+*
+The
+type
+of
+update
+check
+being
+performed
+*
 *
 returns
 true
@@ -45170,6 +45251,7 @@ _isValidUpdate
 (
 aLocalItem
 aRemoteItem
+aUpdateCheckType
 )
 {
 var
@@ -45278,6 +45360,28 @@ max
 return
 false
 ;
+/
+/
+Ignore
+the
+blocklist
+for
+compatibility
+only
+checks
+.
+if
+(
+aUpdateCheckType
+!
+=
+Ci
+.
+nsIExtensionManager
+.
+UPDATE_CHECK_COMPATIBILITY
+)
+{
 if
 (
 !
@@ -45351,6 +45455,7 @@ _platformVersion
 return
 false
 ;
+}
 return
 true
 ;
@@ -50183,6 +50288,7 @@ _isValidUpdate
 (
 aLocalItem
 updatedItem
+aUpdateCheckType
 )
 )
 {
