--- a/browser/locales/Makefile.in
+++ b/browser/locales/Makefile.in
@@ -2844,6 +2844,67 @@ stage
 (
 MAKE_PACKAGE
 )
+ifdef
+MOZ_MAKE_COMPLETE_MAR
+(
+MAKE
+)
+-
+C
+(
+DEPTH
+)
+/
+tools
+/
+update
+-
+packaging
+full
+-
+update
+AB_CD
+=
+(
+AB_CD
+)
+\
+MOZ_PKG_PRETTYNAMES
+=
+(
+MOZ_PKG_PRETTYNAMES
+)
+\
+STAGEDIST
+=
+"
+(
+_ABS_DIST
+)
+/
+install
+"
+\
+PACKAGE_BASE_DIR
+=
+"
+(
+_ABS_DIST
+)
+/
+l10n
+-
+stage
+"
+\
+DIST
+=
+"
+(
+_ABS_DIST
+)
+"
+endif
 #
 packaging
 done
@@ -3206,53 +3267,6 @@ Alter
 it
 with
 caution
-.
-#
-#
-Note
-:
-the
-last
-target
-called
-here
-should
-be
-repackage
--
-zip
--
-*
-as
-the
-l10n
-build
-#
-systems
-rely
-on
-dist
-/
-l10n
--
-stage
-/
-<
-product
->
-to
-be
-in
-place
-in
-order
-to
-package
-#
-the
-complete
-MAR
-files
 .
 installers
 -
