Bug 464364 - Multiple attempts to write permission test file (should cache canUpdate). r=dtownsend, approval1.9.1=beltzner
UltraBlame original commit: efa317f0470dfed286ec64cedf0d9bbaeb1163de

--- a/toolkit/mozapps/update/src/nsUpdateService.js.in
+++ b/toolkit/mozapps/update/src/nsUpdateService.js.in
@@ -1166,6 +1166,11 @@ gConsole
 null
 ;
 var
+gCanUpdate
+=
+null
+;
+var
 gLogEnabled
 =
 {
@@ -7117,21 +7122,6 @@ shutdown
 false
 )
 ;
-os
-.
-addObserver
-(
-this
-"
-final
--
-ui
--
-startup
-"
-false
-)
-;
 }
 UpdateService
 .
@@ -10956,6 +10946,17 @@ canUpdate
 (
 )
 {
+if
+(
+gCanUpdate
+!
+=
+=
+null
+)
+return
+gCanUpdate
+;
 try
 {
 var
@@ -11821,6 +11822,8 @@ to
 install
 directory
 return
+gCanUpdate
+=
 false
 ;
 }
@@ -11899,6 +11902,8 @@ pref
 )
 ;
 return
+gCanUpdate
+=
 false
 ;
 }
@@ -11946,6 +11951,8 @@ ABI
 )
 ;
 return
+gCanUpdate
+=
 false
 ;
 }
@@ -11993,6 +12000,8 @@ version
 )
 ;
 return
+gCanUpdate
+=
 false
 ;
 }
@@ -12011,6 +12020,8 @@ update
 )
 ;
 return
+gCanUpdate
+=
 true
 ;
 }
