Bug 463824, Introduce GLOBAL_DEPS to build system r=ted, a1.9.1=beltzner
UltraBlame original commit: 87f6ae0c4324ce0d1b6133fbe6405e8d3baa6934

--- a/extensions/java/xpcom/interfaces/Makefile.in
+++ b/extensions/java/xpcom/interfaces/Makefile.in
@@ -738,10 +738,9 @@ pl
 (
 PACKAGE_DIR
 )
-Makefile
-Makefile
-.
-in
+(
+GLOBAL_DEPS
+)
 (
 PERL
 )
@@ -888,10 +887,9 @@ JAVA_IFACES_PKG_NAME
 .
 java
 )
-Makefile
-Makefile
-.
-in
+(
+GLOBAL_DEPS
+)
 echo
 Compiling
 Java
