--- a/xpcom/tests/static-checker/Makefile.in
+++ b/xpcom/tests/static-checker/Makefile.in
@@ -760,10 +760,9 @@ fail
 %
 .
 cpp
-Makefile
-Makefile
-.
-in
+(
+GLOBAL_DEPS
+)
 (
 DEHYDRA_SCRIPTS
 )
@@ -873,10 +872,9 @@ warn
 %
 .
 cpp
-Makefile
-Makefile
-.
-in
+(
+GLOBAL_DEPS
+)
 (
 DEHYDRA_SCRIPTS
 )
@@ -1057,10 +1055,9 @@ pass
 %
 .
 cpp
-Makefile
-Makefile
-.
-in
+(
+GLOBAL_DEPS
+)
 (
 DEHYDRA_SCRIPTS
 )
