Bug 466257 - 'Workers: Errors in sub workers aren't propagated to top-most parents like they should.' r+sr=sicking, a=blocking1.9.1+.
UltraBlame original commit: c78bf8d3cb06b1278e6a4f46ee898df9673b82b3

--- a/dom/src/threads/test/Makefile.in
+++ b/dom/src/threads/test/Makefile.in
@@ -455,6 +455,18 @@ mk
 _TEST_FILES
 =
 \
+test_errorPropagation
+.
+html
+\
+errorPropagation_worker1
+.
+js
+\
+errorPropagation_worker2
+.
+js
+\
 test_importScripts
 .
 html
