Bug 466256 - 'Workers: Prevent cross-site workers and properly resolve relative URIs.' r+sr=jst, a=blocking1.9.1+.
UltraBlame original commit: 2f6b84f2e48c6bef1834ffb9b40c0e6bcf0471f6

--- a/dom/src/threads/test/Makefile.in
+++ b/dom/src/threads/test/Makefile.in
@@ -431,7 +431,7 @@ src
 /
 threads
 /
-tests
+test
 include
 (
 DEPTH
@@ -511,6 +511,22 @@ regExpStatics_worker
 .
 js
 \
+test_relativeLoad
+.
+html
+\
+relativeLoad_worker
+.
+js
+\
+relativeLoad_worker2
+.
+js
+\
+relativeLoad_import
+.
+js
+\
 test_simpleThread
 .
 html
@@ -586,6 +602,24 @@ js
 (
 NULL
 )
+_SUBDIR_TEST_FILES
+=
+\
+relativeLoad_sub_worker
+.
+js
+\
+relativeLoad_sub_worker2
+.
+js
+\
+relativeLoad_sub_import
+.
+js
+\
+(
+NULL
+)
 libs
 :
 :
@@ -618,3 +652,37 @@ tests
 (
 relativesrcdir
 )
+libs
+:
+:
+(
+_SUBDIR_TEST_FILES
+)
+(
+INSTALL
+)
+(
+foreach
+f
+^
+"
+f
+"
+)
+(
+DEPTH
+)
+/
+_tests
+/
+testing
+/
+mochitest
+/
+tests
+/
+(
+relativesrcdir
+)
+/
+subdir
