Backed out changeset 87f6ae0c4324 (bug 435474) for orange.
UltraBlame original commit: 21d4cb73f6fe401968c9f1f10da7ed1cb72e40db

--- a/extensions/java/xpcom/interfaces/Makefile.in
+++ b/extensions/java/xpcom/interfaces/Makefile.in
@@ -738,9 +738,10 @@ pl
 (
 PACKAGE_DIR
 )
-(
-GLOBAL_DEPS
-)
+Makefile
+Makefile
+.
+in
 (
 PERL
 )
@@ -887,9 +888,10 @@ JAVA_IFACES_PKG_NAME
 .
 java
 )
-(
-GLOBAL_DEPS
-)
+Makefile
+Makefile
+.
+in
 echo
 Compiling
 Java
