--- a/xpcom/tests/static-checker/Makefile.in
+++ b/xpcom/tests/static-checker/Makefile.in
@@ -760,9 +760,10 @@ fail
 %
 .
 cpp
-(
-GLOBAL_DEPS
-)
+Makefile
+Makefile
+.
+in
 (
 DEHYDRA_SCRIPTS
 )
@@ -872,9 +873,10 @@ warn
 %
 .
 cpp
-(
-GLOBAL_DEPS
-)
+Makefile
+Makefile
+.
+in
 (
 DEHYDRA_SCRIPTS
 )
@@ -1055,9 +1057,10 @@ pass
 %
 .
 cpp
-(
-GLOBAL_DEPS
-)
+Makefile
+Makefile
+.
+in
 (
 DEHYDRA_SCRIPTS
 )
