Bug 453865 - 'Workers: Allow JSON-able objects to be passed as messages to worker threads.' r+sr+a=jst.
UltraBlame original commit: 17842a2d0c7f6b7f4dea7e7eb0119e1a8363f62b

--- a/dom/src/threads/Makefile.in
+++ b/dom/src/threads/Makefile.in
@@ -469,6 +469,8 @@ string
 \
 thebes
 \
+uconv
+\
 widget
 \
 xpcom
@@ -542,6 +544,18 @@ dom
 src
 /
 base
+\
+-
+I
+(
+topsrcdir
+)
+/
+dom
+/
+src
+/
+json
 \
 -
 I
