Bug 465556: Fennec does not create extensions.rdf file. r=robstrong, a1.9.1=beltzner
UltraBlame original commit: 18ecd1a5fd1d4e03f78934434c1d331fc53d4148

--- a/toolkit/mozapps/extensions/src/nsExtensionManager.js.in
+++ b/toolkit/mozapps/extensions/src/nsExtensionManager.js.in
@@ -18047,10 +18047,7 @@ if
 (
 this
 .
-_ptr
-&
-&
-gRDF
+_ds
 )
 {
 gRDF
@@ -18065,6 +18062,20 @@ _ptr
 this
 .
 _ptr
+=
+null
+;
+this
+.
+_ds
+.
+shutdown
+(
+)
+;
+this
+.
+_ds
 =
 null
 ;
@@ -42617,13 +42628,6 @@ return
 this
 .
 _ds
-.
-QueryInterface
-(
-Ci
-.
-nsIRDFDataSource
-)
 ;
 }
 /
@@ -51674,6 +51678,63 @@ null
 _defaultTheme
 :
 null
+/
+*
+*
+*
+Called
+during
+application
+shutdown
+to
+clear
+any
+references
+held
+.
+*
+The
+ExtensionsDataSource
+is
+unusable
+after
+calling
+this
+.
+*
+/
+shutdown
+:
+function
+EMDS_shutdown
+(
+)
+{
+this
+.
+_inner
+=
+null
+;
+this
+.
+_em
+=
+null
+;
+this
+.
+_itemRoot
+=
+null
+;
+this
+.
+_defaultTheme
+=
+null
+;
+}
 /
 *
 *
@@ -64444,6 +64505,77 @@ uri
 )
 {
 }
+classDescription
+:
+"
+Extension
+Manager
+Data
+Source
+"
+contractID
+:
+"
+mozilla
+.
+org
+/
+rdf
+/
+datasource
+;
+1
+?
+name
+=
+extensions
+"
+classID
+:
+Components
+.
+ID
+(
+"
+{
+69BB8313
+-
+2D4F
+-
+45EC
+-
+97E0
+-
+D39DA58ECCE9
+}
+"
+)
+_xpcom_factory
+:
+{
+createInstance
+:
+function
+(
+)
+Cc
+[
+ExtensionManager
+.
+prototype
+.
+contractID
+]
+.
+getService
+(
+Ci
+.
+nsIExtensionManager
+)
+.
+datasource
+}
 QueryInterface
 :
 XPCOMUtils
@@ -64875,90 +65007,6 @@ nsIUpdateItem
 }
 ;
 function
-DatasourceModule
-(
-)
-{
-}
-DatasourceModule
-.
-prototype
-=
-{
-classDescription
-:
-"
-Extension
-Manager
-Data
-Source
-"
-contractID
-:
-"
-mozilla
-.
-org
-/
-rdf
-/
-datasource
-;
-1
-?
-name
-=
-extensions
-"
-classID
-:
-Components
-.
-ID
-(
-"
-{
-69BB8313
--
-2D4F
--
-45EC
--
-97E0
--
-D39DA58ECCE9
-}
-"
-)
-_xpcom_factory
-:
-{
-createInstance
-:
-function
-(
-)
-Cc
-[
-ExtensionManager
-.
-prototype
-.
-contractID
-]
-.
-getService
-(
-Ci
-.
-nsIExtensionManager
-)
-.
-datasource
-}
-}
-;
-function
 NSGetModule
 (
 compMgr
@@ -64970,7 +65018,7 @@ generateModule
 (
 [
 ExtensionManager
-DatasourceModule
+ExtensionsDataSource
 UpdateItem
 ]
 )
