--- a/configure.in
+++ b/configure.in
@@ -1283,6 +1283,11 @@ PERL_VERSION
 5
 .
 006
+PYTHON_VERSION
+=
+2
+.
+4
 LIBART_VERSION
 =
 2
@@ -5589,6 +5594,20 @@ AC_DEFINE_UNQUOTED
 _WIN32_IE
 0x0500
 )
+#
+we
+need
+Python
+2
+.
+5
+on
+Windows
+PYTHON_VERSION
+=
+2
+.
+5
 ;
 ;
 esac
@@ -6092,10 +6111,50 @@ yes
 ]
 )
 fi
+dnl
+Scratchbox
+ships
+with
+"
+python
+"
+=
+=
+Python
+2
+.
+3
+and
+"
+python2
+.
+4
+"
+.
+dnl
+Check
+for
+explicitly
+-
+versioned
+binaries
+first
+to
+save
+them
+some
+pain
+.
 AC_PATH_PROGS
 (
 PYTHON
 PYTHON
+python2
+.
+5
+python2
+.
+4
 python
 )
 if
@@ -6120,6 +6179,110 @@ PATH
 ]
 )
 fi
+dnl
+We
+require
+version
+2
+.
+4
+or
+newer
+of
+Python
+to
+build
+dnl
+and
+2
+.
+5
+or
+newer
+on
+Windows
+.
+AC_MSG_CHECKING
+(
+[
+for
+minimum
+required
+Python
+version
+>
+=
+PYTHON_VERSION
+]
+)
+changequote
+(
+)
+PYTHON
+-
+c
+"
+import
+sys
+;
+sys
+.
+exit
+(
+sys
+.
+version
+[
+:
+3
+]
+<
+sys
+.
+argv
+[
+1
+]
+)
+"
+PYTHON_VERSION
+_python_res
+=
+?
+changequote
+(
+[
+]
+)
+if
+test
+"
+_python_res
+"
+!
+=
+0
+;
+then
+AC_MSG_ERROR
+(
+[
+Python
+PYTHON_VERSION
+or
+higher
+is
+required
+.
+]
+)
+fi
+AC_MSG_RESULT
+(
+[
+yes
+]
+)
 AC_PATH_PROGS
 (
 NSINSTALL_BIN
