Bug 465573 - Add mochitests for ElementTraversal; r+sr=jonas
UltraBlame original commit: a5071bef601d99db47b2b5df20e485a924d3fa94

--- a/content/base/test/Makefile.in
+++ b/content/base/test/Makefile.in
@@ -1331,6 +1331,25 @@ html
 headers
 ^
 \
+test_elementTraversal
+.
+html
+\
+test_w3element_traversal
+.
+html
+\
+test_w3element_traversal
+.
+xhtml
+\
+test_w3element_traversal_svg
+.
+html
+\
+w3element_traversal
+.
+svg
 (
 NULL
 )
