Bug 464158. Implement media type switching based on the MIME type of the loaded resouce. r=doublec,sr=roc
UltraBlame original commit: 3f5a6da199fcfb3620265f2abfac3ed7f26394ea

--- a/content/media/video/test/Makefile.in
+++ b/content/media/video/test/Makefile.in
@@ -452,6 +452,10 @@ test_bug461281
 .
 html
 \
+test_bug463162
+.
+xhtml
+\
 test_constants
 .
 html
@@ -473,6 +477,10 @@ test_ended1
 html
 \
 test_ended2
+.
+html
+\
+test_media_selection
 .
 html
 \
