Update Unicode data files to Unicode version 5.1. Bug 427350, r=jdaggett
UltraBlame original commit: b7d98dc8d246e894bd1b1dc5874d5425763274c8

--- a/intl/unicharutil/tables/transliterate.properties
+++ b/intl/unicharutil/tables/transliterate.properties
@@ -2919,6 +2919,55 @@ entity
 9
 entity
 .
+3192
+=
+[
+0
+]
+entity
+.
+3193
+=
+[
+1
+]
+entity
+.
+3194
+=
+[
+2
+]
+entity
+.
+3195
+=
+[
+3
+]
+entity
+.
+3196
+=
+[
+1
+]
+entity
+.
+3197
+=
+[
+2
+]
+entity
+.
+3198
+=
+[
+3
+]
+entity
+.
 3302
 =
 0
@@ -3017,6 +3066,54 @@ entity
 3439
 =
 9
+entity
+.
+3440
+=
+[
+10
+]
+entity
+.
+3441
+=
+[
+100
+]
+entity
+.
+3442
+=
+[
+1000
+]
+entity
+.
+3443
+=
+[
+1
+/
+4
+]
+entity
+.
+3444
+=
+[
+1
+/
+2
+]
+entity
+.
+3445
+=
+[
+3
+/
+4
+]
 entity
 .
 3664
@@ -3306,6 +3403,56 @@ entity
 entity
 .
 4169
+=
+9
+entity
+.
+4240
+=
+0
+entity
+.
+4241
+=
+1
+entity
+.
+4242
+=
+2
+entity
+.
+4243
+=
+3
+entity
+.
+4244
+=
+4
+entity
+.
+4245
+=
+5
+entity
+.
+4246
+=
+6
+entity
+.
+4247
+=
+7
+entity
+.
+4248
+=
+8
+entity
+.
+4249
 =
 9
 entity
@@ -3787,6 +3934,156 @@ entity
 entity
 .
 7001
+=
+9
+entity
+.
+7088
+=
+0
+entity
+.
+7089
+=
+1
+entity
+.
+7090
+=
+2
+entity
+.
+7091
+=
+3
+entity
+.
+7092
+=
+4
+entity
+.
+7093
+=
+5
+entity
+.
+7094
+=
+6
+entity
+.
+7095
+=
+7
+entity
+.
+7096
+=
+8
+entity
+.
+7097
+=
+9
+entity
+.
+7232
+=
+0
+entity
+.
+7233
+=
+1
+entity
+.
+7234
+=
+2
+entity
+.
+7235
+=
+3
+entity
+.
+7236
+=
+4
+entity
+.
+7237
+=
+5
+entity
+.
+7238
+=
+6
+entity
+.
+7239
+=
+7
+entity
+.
+7240
+=
+8
+entity
+.
+7241
+=
+9
+entity
+.
+7248
+=
+0
+entity
+.
+7249
+=
+1
+entity
+.
+7250
+=
+2
+entity
+.
+7251
+=
+3
+entity
+.
+7252
+=
+4
+entity
+.
+7253
+=
+5
+entity
+.
+7254
+=
+6
+entity
+.
+7255
+=
+7
+entity
+.
+7256
+=
+8
+entity
+.
+7257
 =
 9
 entity
@@ -6455,6 +6752,34 @@ entity
 ]
 entity
 .
+8581
+=
+[
+6
+]
+entity
+.
+8582
+=
+[
+50
+]
+entity
+.
+8583
+=
+[
+50000
+]
+entity
+.
+8584
+=
+[
+100000
+]
+entity
+.
 9312
 =
 (
@@ -7785,6 +8110,22 @@ entity
 =
 entity
 .
+11388
+=
+v
+(
+j
+)
+entity
+.
+11389
+=
+^
+(
+V
+)
+entity
+.
 11517
 =
 [
@@ -8078,6 +8419,206 @@ entity
 (
 50
 )
+entity
+.
+42528
+=
+0
+entity
+.
+42529
+=
+1
+entity
+.
+42530
+=
+2
+entity
+.
+42531
+=
+3
+entity
+.
+42532
+=
+4
+entity
+.
+42533
+=
+5
+entity
+.
+42534
+=
+6
+entity
+.
+42535
+=
+7
+entity
+.
+42536
+=
+8
+entity
+.
+42537
+=
+9
+entity
+.
+43216
+=
+0
+entity
+.
+43217
+=
+1
+entity
+.
+43218
+=
+2
+entity
+.
+43219
+=
+3
+entity
+.
+43220
+=
+4
+entity
+.
+43221
+=
+5
+entity
+.
+43222
+=
+6
+entity
+.
+43223
+=
+7
+entity
+.
+43224
+=
+8
+entity
+.
+43225
+=
+9
+entity
+.
+43264
+=
+0
+entity
+.
+43265
+=
+1
+entity
+.
+43266
+=
+2
+entity
+.
+43267
+=
+3
+entity
+.
+43268
+=
+4
+entity
+.
+43269
+=
+5
+entity
+.
+43270
+=
+6
+entity
+.
+43271
+=
+7
+entity
+.
+43272
+=
+8
+entity
+.
+43273
+=
+9
+entity
+.
+43600
+=
+0
+entity
+.
+43601
+=
+1
+entity
+.
+43602
+=
+2
+entity
+.
+43603
+=
+3
+entity
+.
+43604
+=
+4
+entity
+.
+43605
+=
+5
+entity
+.
+43606
+=
+6
+entity
+.
+43607
+=
+7
+entity
+.
+43608
+=
+8
+entity
+.
+43609
+=
+9
 entity
 .
 64256
