Bug 424068: Disable Unicode collation on Mac more intelligently. r=jdaggett
UltraBlame original commit: fab5f2a3bcdf7938232a69dc5be58427cd8f7f91

--- a/intl/locale/src/mac/Makefile.in
+++ b/intl/locale/src/mac/Makefile.in
@@ -454,10 +454,6 @@ nsCollationMac
 .
 cpp
 \
-nsCollationMacUC
-.
-cpp
-\
 nsDateTimeFormatMac
 .
 cpp
@@ -469,6 +465,15 @@ cpp
 (
 NULL
 )
+ifdef
+USE_UCCOLLATIONKEY
+CPPSRCS
++
+=
+nsCollationMacUC
+.
+cpp
+endif
 include
 (
 topsrcdir
