Bug 467057 - xul menulist doesn't fire expand/collapse state change events, r=marcoz, aaronlev
UltraBlame original commit: eee99387e23b8a4a8843ea543bae1591b900ae8e

--- a/accessible/tests/mochitest/Makefile.in
+++ b/accessible/tests/mochitest/Makefile.in
@@ -554,6 +554,10 @@ test_nsIAccessible_applicationAccessible
 .
 html
 \
+test_nsIAccessible_comboboxes
+.
+xul
+\
 test_nsIAccessible_editablebody
 .
 html
