Bug 464190 -  GetProcAddress Wince Workaround r=ted
UltraBlame original commit: ea2328828506bc52d3283c3b8eb38923791c1431

--- a/configure.in
+++ b/configure.in
@@ -2355,6 +2355,41 @@ in
 *
 wince
 )
+MOZ_ARG_WITH_STRING
+(
+wince
+-
+sdk
+[
+-
+-
+with
+-
+wince
+-
+sdk
+=
+WINCE_SDK
+The
+path
+to
+the
+windows
+mobile
+sdk
+]
+WINCE_SDK
+=
+withval
+)
+export
+WINCE
+=
+1
+mk_add_options
+WINCE
+=
+1
 echo
 -
 -
@@ -2443,87 +2478,32 @@ and
 Tool
 Chain
 echo
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
--
+Using
+SDK
+in
+:
+echo
+WINCE_SDK
 ac_exeext
 =
 .
 exe
+rm
+-
+f
+srcdir
+/
+build
+/
+wince
+/
+shunt
+/
+include
+/
+windows
+.
+h
 echo
 -
 n
@@ -2589,6 +2569,56 @@ build
 wince
 /
 tools
+echo
+"
+#
+include
+\
+"
+WINCE_SDK
+/
+windows
+.
+h
+\
+"
+"
+>
+srcdir
+/
+build
+/
+wince
+/
+shunt
+/
+include
+/
+windows
+.
+h
+echo
+"
+#
+define
+GetProcAddress
+GetProcAddressA
+"
+>
+>
+srcdir
+/
+build
+/
+wince
+/
+shunt
+/
+include
+/
+windows
+.
+h
 echo
 -
 -
@@ -68909,6 +68939,10 @@ MOZ_TIMELINE
 AC_SUBST
 (
 WINCE
+)
+AC_SUBST
+(
+WINCE_SDK
 )
 AC_SUBST
 (
