Bug 464088 -  Option to build NSS without dbm, non-nss changes r=ted
UltraBlame original commit: 20a011760de7f770f71c1187f4760efeda64ff62

--- a/configure.in
+++ b/configure.in
@@ -40259,6 +40259,144 @@ dnl
 =
 dnl
 =
+Disable
+building
+dbm
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+MOZ_ARG_DISABLE_BOOL
+(
+dbm
+[
+-
+-
+disable
+-
+dbm
+Disable
+building
+dbm
+]
+NSS_DISABLE_DBM
+=
+1
+NSS_DISABLE_DBM
+=
+)
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+dnl
+=
 Open
 JVM
 Interface
@@ -69175,6 +69313,10 @@ NSS_DEP_LIBS
 AC_SUBST
 (
 MOZ_NATIVE_NSS
+)
+AC_SUBST
+(
+NSS_DISABLE_DBM
 )
 AC_SUBST
 (
