When operator new is used on a class with no constructor it generates an AGGR_INIT_EXPR, not a CALL_EXPR... with testcase. NPODB, static-checking only.
UltraBlame original commit: 8d70108278252a5a0fb1161b262dd4c8c8beb8fc

--- a/xpcom/tests/static-checker/Makefile.in
+++ b/xpcom/tests/static-checker/Makefile.in
@@ -482,6 +482,10 @@ StackConditional
 .
 cpp
 \
+StackAggrInit
+.
+cpp
+\
 (
 NULL
 )
@@ -684,6 +688,9 @@ FLOW_PASS_TESTCASES
 (
 NULL
 )
+REQUIRES
+=
+xpcom
 include
 (
 topsrcdir
@@ -962,6 +969,7 @@ have
 \
 n
 "
+;
 \
 exit
 1
@@ -1040,6 +1048,7 @@ issued
 \
 n
 "
+;
 \
 exit
 1
