Adding tests for bug 112564 and bug 92598
UltraBlame original commit: f290559c01d1686789ede6c58feeaa518e79e21a

--- a/docshell/test/chrome/Makefile.in
+++ b/docshell/test/chrome/Makefile.in
@@ -435,8 +435,56 @@ config
 rules
 .
 mk
+_HTTP_FILES
+=
+\
+92598_nostore
+.
+html
+\
+92598_nostore
+.
+html
+^
+headers
+^
+\
+112564_nocache
+.
+html
+\
+112564_nocache
+.
+html
+^
+headers
+^
+\
+(
+NULL
+)
 _TEST_FILES
 =
+\
+test_bug92598
+.
+xul
+\
+bug92598_window
+.
+xul
+\
+92598_nostore
+.
+html
+\
+test_bug112564
+.
+xul
+\
+bug112564_window
+.
+xul
 \
 test_bug113934
 .
@@ -482,6 +530,38 @@ xul
 \
 (
 NULL
+)
+libs
+:
+:
+(
+_HTTP_FILES
+)
+(
+INSTALL
+)
+(
+foreach
+f
+^
+"
+f
+"
+)
+(
+DEPTH
+)
+/
+_tests
+/
+testing
+/
+mochitest
+/
+tests
+/
+(
+relativesrcdir
 )
 libs
 :
