Bug 215405.  Restore scroll position, but not form state, on no-store and SSL no-cache sites.  r+sr=bzbarsky
UltraBlame original commit: 4047bed537d67f61567d6fa546da47cdab3dda35

--- a/docshell/test/chrome/Makefile.in
+++ b/docshell/test/chrome/Makefile.in
@@ -460,6 +460,28 @@ html
 headers
 ^
 \
+215405_nostore
+.
+html
+\
+215405_nostore
+.
+html
+^
+headers
+^
+\
+215405_nocache
+.
+html
+\
+215405_nocache
+.
+html
+^
+headers
+^
+\
 (
 NULL
 )
@@ -491,6 +513,14 @@ test_bug113934
 xul
 \
 bug113934_window
+.
+xul
+\
+test_bug215405
+.
+xul
+\
+bug215405_window
 .
 xul
 \
